<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="16dp" >

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/item_title_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/item_camera"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="0dp"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_place_label" />

                    <EditText
                        android:id="@+id/item_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/item_place_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_details_label" />

                    <EditText
                        android:id="@+id/item_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/item_details_hint" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/item_location_label" />

                    <EditText
                        android:id="@+id/item_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:editable="false"
                        android:inputType="none"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/item_date_label" />

            <Button
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/date_picker_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/item_friend_label" />

            <Button
                android:id="@+id/item_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_friend_text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/show_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_map" />

        <Button
            android:id="@+id/item_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_share" />

        <Button
            android:id="@+id/item_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

    </LinearLayout>
</ScrollView>